Bug 1024454 (Part 1) - Eagerly propagate dirty bits so absolute children of table parts get reflowed reliably. r=dbaron